--- a/Test_notebook.ipynb
+++ b/Test_notebook.ipynb
@@ -4,6 +4,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Group Uranus - Phase 2 Project\n",
+    "![King County Skyline](./images/skyline.jpeg)\n",
+    "## Contributors:  Brad Blackwood, Ashley Eakland and Jalen Charles\n",
+    "### Project Proposal: A user-friendly tool to predict pricing of homes using just a few key metrics, accomplished using multiple linear regression analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Building Condition [King County Assessor Website](https://info.kingcounty.gov/assessor/esales/Glossary.aspx?type=r)\n",
+    "\n",
+    "Relative to age and grade. Coded 1-5.\n",
+    "\n",
+    "1 = Poor- Worn out. Repair and overhaul needed on painted surfaces, roofing, plumbing, heating and numerous functional inadequacies. Excessive deferred maintenance and abuse, limited value-in-use, approaching abandonment or major reconstruction; reuse or change in occupancy is imminent. Effective age is near the end of the scale regardless of the actual chronological age.\n",
+    "\n",
+    "2 = Fair- Badly worn. Much repair needed. Many items need refinishing or overhauling, deferred maintenance obvious, inadequate building utility and systems all shortening the life expectancy and increasing the effective age.\n",
+    "\n",
+    "3 = Average- Some evidence of deferred maintenance and normal obsolescence with age in that a few minor repairs are needed, along with some refinishing. All major components still functional and contributing toward an extended life expectancy. Effective age and utility is standard for like properties of its class and usage.\n",
+    "\n",
+    "4 = Good- No obvious maintenance required but neither is everything new. Appearance and utility are above the standard and the overall effective age will be lower than the typical property.\n",
+    "\n",
+    "5= Very Good- All items well maintained, many having been overhauled and repaired as they have shown signs of wear, increasing the life expectancy and lowering the effective age with little deterioration or obsolescence evident with a high degree of utility."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Building Grade [King County Assessor Website](https://info.kingcounty.gov/assessor/esales/Glossary.aspx?type=r)\n",
+    "Represents the construction quality of improvements. Grades run from grade 1 to 13. Generally defined as:\n",
+    "\n",
+    "1-3 Falls short of minimum building standards. Normally cabin or inferior structure.\n",
+    "\n",
+    "4 Generally older, low quality construction. Does not meet code.\n",
+    "\n",
+    "5 Low construction costs and workmanship. Small, simple design.\n",
+    "\n",
+    "6 Lowest grade currently meeting building code. Low quality materials and simple designs.\n",
+    "\n",
+    "7 Average grade of construction and design. Commonly seen in plats and older sub-divisions.\n",
+    "\n",
+    "8 Just above average in construction and design. Usually better materials in both the exterior and interior finish work.\n",
+    "\n",
+    "9 Better architectural design with extra interior and exterior design and quality.\n",
+    "\n",
+    "10 Homes of this quality generally have high quality features. Finish work is better and more design quality is seen in the floor plans. Generally have a larger square footage.\n",
+    "\n",
+    "11 Custom design and higher quality finish work with added amenities of solid woods, bathroom fixtures and more luxurious options.\n",
+    "\n",
+    "12 Custom design and excellent builders. All materials are of the highest quality and all conveniences are present.\n",
+    "\n",
+    "13 Generally custom designed and built. Mansion level. Large amount of highest quality cabinet work, wood trim, marble, entry ways etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Column Names and Descriptions for King County Data Set\n",
     "* `id` - Unique identifier for a house\n",
     "* `date` - Date house was sold\n",
