--- a/GroupU_Project_starter.ipynb
+++ b/GroupU_Project_starter.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -292,7 +292,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,6 +394,37 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1300    138\n",
+       "1400    135\n",
+       "1440    133\n",
+       "1660    129\n",
+       "1010    129\n",
+       "       ... \n",
+       "4970      1\n",
+       "2905      1\n",
+       "2793      1\n",
+       "4810      1\n",
+       "1975      1\n",
+       "Name: sqft_living, Length: 1034, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sqft_living.value_counts()"
    ]
   },
   {
