--- a/Test_notebook.ipynb
+++ b/Test_notebook.ipynb
@@ -4,32 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Column Names and Descriptions for King County Data Set\n",
-    "* `id` - Unique identifier for a house\n",
-    "* `date` - Date house was sold\n",
-    "* `price` - Sale price (prediction target)\n",
-    "* `bedrooms` - Number of bedrooms\n",
-    "* `bathrooms` - Number of bathrooms\n",
-    "* `sqft_living` - Square footage of living space in the home\n",
-    "* `sqft_lot` - Square footage of the lot\n",
-    "* `floors` - Number of floors (levels) in house\n",
-    "* `waterfront` - Whether the house is on a waterfront\n",
-    "  * Includes Duwamish, Elliott Bay, Puget Sound, Lake Union, Ship Canal, Lake Washington, Lake Sammamish, other lake, and river/slough waterfronts\n",
-    "* `view` - Quality of view from house\n",
-    "  * Includes views of Mt. Rainier, Olympics, Cascades, Territorial, Seattle Skyline, Puget Sound, Lake Washington, Lake Sammamish, small lake / river / creek, and other\n",
-    "* `condition` - How good the overall condition of the house is. Related to maintenance of house.\n",
-    "  * See the [King County Assessor Website](https://info.kingcounty.gov/assessor/esales/Glossary.aspx?type=r) for further explanation of each condition code\n",
-    "* `grade` - Overall grade of the house. Related to the construction and design of the house.\n",
-    "  * See the [King County Assessor Website](https://info.kingcounty.gov/assessor/esales/Glossary.aspx?type=r) for further explanation of each building grade code\n",
-    "* `sqft_above` - Square footage of house apart from basement\n",
-    "* `sqft_basement` - Square footage of the basement\n",
-    "* `yr_built` - Year when house was built\n",
-    "* `yr_renovated` - Year when house was renovated\n",
-    "* `zipcode` - ZIP Code used by the United States Postal Service\n",
-    "* `lat` - Latitude coordinate\n",
-    "* `long` - Longitude coordinate\n",
-    "* `sqft_living15` - The square footage of interior housing living space for the nearest 15 neighbors\n",
-    "* `sqft_lot15` - The square footage of the land lots of the nearest 15 neighbors\n"
+    "<center> <h1>  Group Uranus - Phase 2 Project </h1> </center>\n",
+    "\n",
+    "\n",
+    "<center> <img src=\"./images/skyline.jpeg\" alt=\"King County Skyline\" width=\"800\"/> </center>\n",
+    "\n",
+    "<center> <h2> Contributors:  Brad Blackwood, Ashley Eakland and Jalen Charles </h2> </center>\n",
+    "\n",
+    "### Project Proposal: A user-friendly tool to predict pricing of homes using just a few key metrics, accomplished using multiple linear regression analysis.\n"
    ]
   },
   {
@@ -37,9 +19,7 @@
    "metadata": {},
    "source": [
     "### Business Understanding\n",
-    "* \n",
-    "* \n",
-    "* "
+    "##### Utilizing the CRISP-DM process, it is our goal with this project to present to both home buyers and sellers a user friendly tool to accurately predict the price of a home based on a few key metrics. The first step in this process is understanding the business, which in this case would be the consumer benefit of having a user friendly tool for home price predictions."
    ]
   },
   {
@@ -47,9 +27,38 @@
    "metadata": {},
    "source": [
     "### Data Understanding and Preparation\n",
-    "* \n",
-    "* \n",
-    "* "
+    "##### For this analysis, and the second and third steps of the CRISP-DM process, we will gain a better understanding of our dataset. Utilizing the column names and descriptions below, as well as the following code blocks, we discovered the following:\n",
+    "\n",
+    "* This is a dataset of home sales in King County, Washington containing over unique 21,500 home sale data points.\n",
+    "\n",
+    "* Data includes:\n",
+    "    * `id` - Unique ID number for a home\n",
+    "    * `date` - Date home was sold - this dataset contains sales from May 2014 through May 2015\n",
+    "    * `price` - Sale price - which is our prediction target for this project\n",
+    "    * `bedrooms` - Number of bedrooms in the home\n",
+    "    * `bathrooms` - Number of bathrooms in the home\n",
+    "    * `sqft_living` - Square footage of living space in the home\n",
+    "    * `sqft_lot` - Square footage of the lot \n",
+    "    * `floors` - Number of floors (levels) in the home\n",
+    "    * `waterfront` - Whether the home is on a waterfront, represented as `YES` or `NO` (includes Duwamish, Elliott Bay, Puget Sound, Lake Union, Ship Canal, Lake Washington, Lake Sammamish, other lake, and river/slough waterfronts)\n",
+    "    * `view` - Quality of view from the home ranked from `NONE` to `EXCELLENT` (includes views of Mt. Rainier, Olympics, Cascades, Territorial, Seattle Skyline, Puget Sound, Lake Washington, Lake Sammamish, small lake / river / creek, and other)\n",
+    "    * `condition` - How good the overall condition of the house is. Related to maintenance of house and ranked 1 through 5 with 1 being `Poor` and 5 being `Very Good` (see the [King County Assessor Website](https://info.kingcounty.gov/assessor/esales/Glossary.aspx?type=r) breakdown of each condition rating specifics.)\n",
+    "    * `grade` - Overall grade of the house. Related to the construction and design of the house and rated 1 through 13 with 1 being short of minimum building standards and 13 being custom designed and built or \"mansion\" quality (see the [King County Assessor Website](https://info.kingcounty.gov/assessor/esales/Glossary.aspx?type=r) for breakdown of what each grade covers specifically)\n",
+    "    * `sqft_above` - Square footage of house above ground level/separate from the basement\n",
+    "    * `sqft_basement` - Square footage of the basement\n",
+    "    * `yr_built` - Year when house was built\n",
+    "    * `yr_renovated` - Year when house was renovated, if applicable\n",
+    "    * `zipcode` - ZIP Code used by the United States Postal Service\n",
+    "    * `lat` - Latitude coordinate\n",
+    "    * `long` - Longitude coordinate\n",
+    "    * `sqft_living15` - The square footage of interior housing living space for the nearest 15 neighbors\n",
+    "    * `sqft_lot15` - The square footage of the land lots of the nearest 15 neighbors\n",
+    "    \n",
+    "* Preliminary analysis shows strongest correlation with prediction target in the `sqft_living` column. This will be our focus feature.\n",
+    "* Null values are seen in few columns in this dataset, with affected columns only being `waterfront`, `view`, and `yr_renovated`. Further data analysis renders these columns irrelevant to our end goal, and thus no preparation or futher investigation into these nulls needed.\n",
+    "* Zip Codes are targeted as an important predictor into a homes value - as they say, \"location, location, location!\". However, Zip Codes are categorical (or discrete variable), and therefore need to be handled differently than a continuous variable in order to be modeled. We opted to utilize Pandas pd.get_dummies to One Hot Encode the Zip Codes. \n",
+    "* Lat/Long were used to plot the Zip Codes on an interactive map utilizing the Folium library, that then pulled in the median home price for that respective Zip Code. \n",
+    "* Data preparation is complete and ready for modeling."
    ]
   },
   {
