markdown and README adds

--- a/Test_notebook.ipynb
+++ b/Test_notebook.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "source": [
     "### Business Understanding\n",
-    "##### Utilizing the CRISP-DM process, it is our goal with this project to present to both home buyers and sellers a user friendly tool to accurately predict the price of a home based on a few key metrics. The first step in this process is understanding the business, which in this case would be the consumer benefit of having a user friendly tool for home price predictions."
+    "##### Utilizing the CRISP-DM process, it is our goal with this project to present to both home buyers and sellers a user friendly tool to accurately predict the price of a home based on a few key metrics. The first step in this process is understanding the business, which in this case would be the consumer benefit of having a user friendly tool for home price predictions. Having an easily accessible and user friendly tool would enable the every day consumer to roughly estimate the price of a home without the need for extensive research or external support."
    ]
   },
   {
@@ -27,10 +27,9 @@
    "metadata": {},
    "source": [
     "### Data Understanding and Preparation\n",
-    "##### For this analysis, and the second and third steps of the CRISP-DM process, we will gain a better understanding of our dataset. Utilizing the column names and descriptions below, as well as the following code blocks, we discovered the following:\n",
+    "##### For this analysis, and the second and third steps of the CRISP-DM process, we will gain a better understanding of our dataset. Being that this is a dataset of home sales data, it will be incredibly useful in the development of a home sales price prediction tool. Utilizing the column names and descriptions below, as well as the following code blocks, we discovered the following:\n",
     "\n",
     "* This is a dataset of home sales in King County, Washington containing over unique 21,500 home sale data points.\n",
-    "\n",
     "* Data includes:\n",
     "    * `id` - Unique ID number for a home\n",
     "    * `date` - Date home was sold - this dataset contains sales from May 2014 through May 2015\n",
@@ -54,9 +53,32 @@
     "    * `sqft_living15` - The square footage of interior housing living space for the nearest 15 neighbors\n",
     "    * `sqft_lot15` - The square footage of the land lots of the nearest 15 neighbors\n",
     "    \n",
-    "* Preliminary analysis shows strongest correlation with prediction target in the `sqft_living` column. This will be our focus feature.\n",
-    "* Null values are seen in few columns in this dataset, with affected columns only being `waterfront`, `view`, and `yr_renovated`. Further data analysis renders these columns irrelevant to our end goal, and thus no preparation or futher investigation into these nulls needed.\n",
-    "* Zip Codes are targeted as an important predictor into a homes value - as they say, \"location, location, location!\". However, Zip Codes are categorical (or discrete variable), and therefore need to be handled differently than a continuous variable in order to be modeled. We opted to utilize Pandas pd.get_dummies to One Hot Encode the Zip Codes. \n",
+    "* Preliminary analysis shows strongest correlation with prediction target feature (`price`) in the `sqft_living` column. This will be our focus feature.\n",
+    "* Null values are seen in few columns in this dataset, with affected columns only being `waterfront`, `view`, and `yr_renovated`. Further data analysis renders these columns irrelevant to our end goal of a simple tool with minimal user input, and thus no preparation or futher investigation into these nulls needed.\n",
+    "* Zip Codes are targeted as an important predictor into a homes value - as they say, \"location, location, location!\". However, Zip Codes are categorical (or a discrete variable), and therefore need to be handled differently than a continuous variable in order to be modeled. We opted to utilize Pandas pd.get_dummies to One Hot Encode the Zip Codes. \n",
+    "* Grades are also determined to be a potentially valuable predictor but that is also discrete. We prepared this data utilizing OHE as well, should we decide to proceed with grades in a final model. It was decided to omit them as an everyday consumer may not be able to accurately \"grade\" their home on the grading scale of 1 to 13 and input that into the tool, and therefore may not be the best choice for the end product of this project if we are able to produce an accurate model without the grade feature.\n",
+    "* With the idea of a tool in mind, and through model iteration described in the Modeling section below, we limit our data to the `zipcodes`, `bedrooms`, `bathrooms`, and `sqft_living`.\n",
+    "* EDA reveals below basic stats for target metric and predictors \n",
+    "     \n",
+    "    * Price\n",
+    "        * Mean Price: \\$540,510\n",
+    "        * Median Price: \\$450,000\n",
+    "        \n",
+    "    * Square Footage\n",
+    "        * Mean: 2080 ft²\n",
+    "        * Median: 1910 ft²\n",
+    "        * Mode: 1300 ft²\n",
+    "\n",
+    "    * Bedrooms\n",
+    "        * Mean: 3.37 \n",
+    "        * Median: 3\n",
+    "        * Mode : 3\n",
+    "\n",
+    "    * Bathrooms\n",
+    "        * Mean: 2.12 \n",
+    "        * Median: 2.25\n",
+    "        * Mode: 2.5\n",
+    "\n",
     "* Lat/Long were used to plot the Zip Codes on an interactive map utilizing the Folium library, that then pulled in the median home price for that respective Zip Code. \n",
     "* Data preparation is complete and ready for modeling."
    ]
@@ -2190,6 +2212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Code from Model Validation lecture as a guide for this function.\n",
     "def train_lr_randomly(data, sample_pt=None, ntimes=100):\n",
     "    \n",
     "    rmse = []\n",
