--- a/Test_notebook.ipynb
+++ b/Test_notebook.ipynb
@@ -53,6 +53,8 @@
     "    * `sqft_living15` - The square footage of interior housing living space for the nearest 15 neighbors\n",
     "    * `sqft_lot15` - The square footage of the land lots of the nearest 15 neighbors\n",
     "    \n",
+    "\n",
+    "\n",
     "* Preliminary analysis shows strongest correlation with prediction target feature (`price`) in the `sqft_living` column. This will be our focus feature.\n",
     "* Null values are seen in few columns in this dataset, with affected columns only being `waterfront`, `view`, and `yr_renovated`. Further data analysis renders these columns irrelevant to our end goal of a simple tool with minimal user input, and thus no preparation or futher investigation into these nulls needed.\n",
     "* Zip Codes are targeted as an important predictor into a homes value - as they say, \"location, location, location!\". However, Zip Codes are categorical (or a discrete variable), and therefore need to be handled differently than a continuous variable in order to be modeled. We opted to utilize Pandas pd.get_dummies to One Hot Encode the Zip Codes. \n",
@@ -2353,7 +2355,9 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2389,7 +2393,15 @@
    "metadata": {},
    "source": [
     "### Regression Results - Final Model\n",
-    "* "
+    "** This particular model was choosen due to the R2 of 74 % which accounts for 74 percent of the variance of our model. \n",
+    "\n",
+    "*The coefficients that were used to account for the varience when looking forprice were square foot living, Bathroom, and bedroom and zipcode(which was one hot encoded) \n",
+    "\n",
+    "*the coefficient sqft living was the most correlated with our target, price,  while bathroom and bedroom where similarly correlated with each other which could lead to some colinearity in our model \n",
+    "\n",
+    "*Zip codes while playing a factor led to a negativel correlated bedroom co-effecient due to the pricing of expensive housing with a lesser bedroom being located in certain zip codes and cheaper houses with more bedrooms located in other zip codes. A proximity scaler of some sort would be added in the future. \n",
+    "\n",
+    "*As a result the stake holder should utilize the model with a descretion and utilize other sources as well\n"
    ]
   },
   {
@@ -2450,9 +2462,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "learn-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2464,7 +2476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
