--- a/Test_notebook.ipynb
+++ b/Test_notebook.ipynb
@@ -2389,7 +2389,15 @@
    "metadata": {},
    "source": [
     "### Regression Results - Final Model\n",
-    "* "
+    "** This particular model was choosen due to the R2 of 74 % which accounts for 74 percent of the variance of our model.\n",
+    "\n",
+    "*The coefficients that were used to account for the varience when looking forprice were square foot living, Bathroom, and bedroom and zipcode(which was one hot encoded)\n",
+    "\n",
+    " *the coefficient sqft living was the most correlated with our target, price,  while bathroom and bedroom where similarly correlated with each other which could lead to some colinearity in our model\n",
+    " \n",
+    "*Zip codes while playing a factor led to a negativel correlated bedroom co-effecient due to the pricing of expensive housing with a lesser bedroom being located in certain zip codes and cheaper houses with more bedrooms located in other zip codes. A proximity scaler of some sort would be added in the future.\n",
+    "\n",
+    " *As a result the stake holder should utilize the model with a descretion and utilize other sources as well"
    ]
   },
   {
