push collab edits

--- a/Test_notebook.ipynb
+++ b/Test_notebook.ipynb
@@ -840,9 +840,33 @@
    "metadata": {},
    "source": [
     "### Modeling\n",
-    "* \n",
-    "* \n",
-    "* "
+    "\n",
+    "The aims of our modeling process was to **maximize accuracy** while **minimizing the inputs**. Decreasing the complexity of the model helps to decrease colinearity and make for a better user experience of our product. We approach model development iteratively to identify the best features for our use case.\n",
+    "Target feature - **Price**\n",
+    "Key feature - **Squarefoot Living Space** (this was identified above with a correlation heat map)\n",
+    "\n",
+    "##### Complimentary features tested\n",
+    "* Zipcodes\n",
+    "* Bedrooms\n",
+    "* Bathroom\n",
+    "* Bedrooms/Bathroom\n",
+    "* Bathrooms/Bedrooms\n",
+    "* Grade\n",
+    "\n",
+    "##### Model Selected included Squarefootage, Zipcode, Bedrooms, and Bathrooms as features.\n",
+    "We tested the our models graphically to determine its performance as it relates to its predicted price.\n",
+    "* This showed that are model has a higher tendency for error as the actual price of the home is lower.\n",
+    "* Most likely this is because other features of lower priced home are stronger predictors of its price. When using our model this is something to be aware of.\n",
+    "* Our model is best at giving an initial estimate of home price and users should consider other means to confirm/increase confidence before purchasing/selling their home.\n",
+    "\n",
+    "##### Feature Impacts\n",
+    "* The Squarefootage feature of our models suggest that price per square foot in King County is ~ \\$275.\n",
+    "* The Bathroom feature of our models suggest that price per bathroom in King County is ~ \\$10,275.\n",
+    "\n",
+    "##### Future Improvements\n",
+    "* Incorporating other commonly available home features (ie. parking, hoa, condition, heating/cooling, home type, neighborhood safety, school district) could potential increase the accuracy of the model.\n",
+    "* Polynomial regression could also be experimented with using available data.\n",
+    "* Using our what is known about our model accuracy we could also develope a function to suggest potential zipcodes that would meet a home specification in their desired budget."
    ]
   },
   {
@@ -2389,15 +2413,22 @@
    "metadata": {},
    "source": [
     "### Regression Results - Final Model\n",
-    "** This particular model was choosen due to the R2 of 74 % which accounts for 74 percent of the variance of our model.\n",
     "\n",
-    "*The coefficients that were used to account for the varience when looking forprice were square foot living, Bathroom, and bedroom and zipcode(which was one hot encoded)\n",
+    "* This particular model was chosen due to the R2 of 74% which accounts for 74 percent of the variance of our model. RMSE ran around $185,000 on our testing data, which was significant. However, we did see that our model performs significantly better on the higher price range homes (at/above median) versus the lower priced homes as depicted below.\n",
     "\n",
-    " *the coefficient sqft living was the most correlated with our target, price,  while bathroom and bedroom where similarly correlated with each other which could lead to some colinearity in our model\n",
-    " \n",
-    "*Zip codes while playing a factor led to a negativel correlated bedroom co-effecient due to the pricing of expensive housing with a lesser bedroom being located in certain zip codes and cheaper houses with more bedrooms located in other zip codes. A proximity scaler of some sort would be added in the future.\n",
+    "In the below graphic, we have our model predictions represented on histograms. The blue dotted line you see is a random sampled home sale value, and our model often is within the range of the sample sale price. We hope to dial this in with future analysis.\n",
     "\n",
-    " *As a result the stake holder should utilize the model with a descretion and utilize other sources as well"
+    "* The coefficients that were used to account for the variance when looking for price were square foot living, number of bathrooms, number of bedrooms, and the zipcode the home was in (which was one hot encoded). Coefficient values for each are as follows:\n",
+    "\n",
+    "    * \\$275 per square foot living space\n",
+    "    * \\$10275 for each additional bathroom\n",
+    "    * \\-$47700 for bedrooms\n",
+    "\n",
+    "* Zip codes, while playing a big factor in price, led to a negatively correlated bedroom coefficient due to the pricing of expensive housing with a lesser bedroom being located in certain zip codes and cheaper houses with more bedrooms located in other zip codes. For example, downtown locations with high costs but smaller number of bedrooms, versus suburban homes that would have a higher number of bedrooms at a lower cost. A proximity scaler of some sort would be added in the future to combat this negative effect.  \n",
+    "\n",
+    "* While sqft living was the most correlated with our target, price, bathroom and bedroom where similarly correlated with each other which could lead to some colinearity in our model. We had run models to see how this affected performance with and without one or the other, but model performance was not severely impacted with removal of bedrooms or bathrooms. This would be worth exploring further in the future. For the purposes of the end-user tool, we decided to keep both features in the model to allow the user to specify both the number of bedrooms AND bathrooms in their inputs.\n",
+    "   \n",
+    "* In conclusion, the stakeholder should utilize the model with a descretion and utilize other sources as well when considering the price of a home. Future analysis would be centered around reducing the error by exploring the multicollinearity further between bedrooms and bathrooms, adding the aforementioned proximity scaler to account for downtown density price escalation, incorporating any missing King County zip codes, and potentially expanding the user interface to allow for running without all of the inputs, with the understanding that the accuracy of the prediction would be reduced. "
    ]
   },
   {
